gfs2_lockcapture: Fixed header to use absolute path and modified some options
Fix the header to use absolute path. The "-o" has been modified
so that it takes a path that will be used to create the root directory of where
the data will be written and will be location of the tarball that is
created. Added undocumented(private) "-m" option that will capture the required
data and additional data that is not captured by default because sometimes it
can cause hangs to occur in certain situations. Removed the data capture of the
command "lsof" cause it might cause hangs when capturing lockdumps cause of
symlink lookup.

Signed-off-by: Shane Bradley <sbradley@redhat.com>

--- a/gfs2/man/gfs2_lockcapture.8
+++ b/gfs2/man/gfs2_lockcapture.8
@@ -38,7 +38,7 @@ Prints information about the mounted GFS2 file systems.
 The gathering of process information will be disabled.
 .TP
 \fB-o \fI<output directory>, \fB--path_to_output_dir\fR=\fI<output directory>\fP
-The directory where all the collect data will stored.
+The directory where all the collect data will be stored.
 .TP
 \fB-r \fI<number of runs>,  \fB--num_of_runs\fR=\fI<number of runs>\fP
 The number of runs capturing the lockdump data. The default is 3 runs.
