fsck.gfs2: Log to syslog on start and exit
In order to piece together the order in which fsck.gfs2 runs and
gfs2_edit savemeta were done it's useful to keep a log of the command
line options used and the fsck.gfs2 start and end times and exit status.
Log these to syslog.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/man/fsck.gfs2.8
+++ b/gfs2/man/fsck.gfs2.8
@@ -35,6 +35,8 @@ computer.  Therefore, fsck.gfs2 will always check the file system unless
 the -p (preen) option is used, in which case it follows special rules
 (see below).
 
+fsck.gfs2 will log to the system log on start and exit to aid debugging and
+administration.
 .SH OPTIONS
 .TP
 \fB-a\fP
