mkfs.gfs2: Allow longer cluster names
Increase the enforced limit for cluster name to 32 bytes and file
system name to 30 bytes for mkfs.gfs2 (was previously 16 + 16
bytes).

Also increased this limit in tunegfs2 when labelling gfs2 file
systems.

Updated the formation in the man pages along with adding a new test
case for mkfs.gfs2 to validate the increased cluster/file system
name support.

Signed-off-by: Paul Evans <pevans@redhat.com>

--- a/gfs2/man/mkfs.gfs2.8
+++ b/gfs2/man/mkfs.gfs2.8
@@ -101,9 +101,9 @@ bigger file systems will have bigger RGs for better performance.
 The lock table field appropriate to the lock module you're using.
 It is \fIclustername:fsname\fR.
 Clustername must match that in cluster.conf; only members of this
-cluster are permitted to use this file system.
+cluster are permitted to use this file system (1 to 32 characters).
 Fsname is a unique file system name used to distinguish this GFS2 file
-system from others created (1 to 16 characters).  Lock_nolock doesn't
+system from others created (1 to 30 characters).  Lock_nolock doesn't
 use this field. Valid \fIclustername\fRs and \fIfsname\fRs may only contain
 alphanumeric characters, hyphens (-) and underscores (_).
 .TP
