--- a/README
+++ b/README
@@ -1,41 +1,69 @@
+gfs2-utils
+----------
 
-To build this source tree, you will need:
+This package contains the tools needed to create, check, manipulate and analyze
+gfs2 filesystems, along with important scripts required to support gfs2
+clusters.
 
- - automake
- - GNU make
- - GCC tool chain
+Build instructions
+------------------
 
-Plus the following libraries:
+The following development packages are required to build gfs2-utils:
 
-    ncurses (for gfs2_edit)
-    gettext
-    bison
-    flex
-    zlib
-    libblkid
-    check (optional, enables the test suite)
+ o autoconf
+ o automake
+ o libtool
+ o GNU make
+ o ncurses
+ o gettext
+ o bison
+ o flex
+ o zlib
+ o libblkid
+ o check (optional, enables the test suite)
+
+The kernel header include/linux/gfs2-ondisk.h and its dependencies are also
+required.
 
 To build gfs2-utils, run the following commands:
 
-    ./autogen.sh
-    ./configure
-    make
+ $ ./autogen.sh
+ $ ./configure
+ $ make
 
-To run the test suite:
+See ./configure --help for more build configuration options.
 
-    make check
+Test Suite
+----------
+
+To run the test suite, use:
+
+ $ make check
+
+See doc/README.tests for more details regarding the test suite.
+
+Installation
+------------
+
+gfs2-utils requires the following libraries:
+
+ o zlib
+ o ncurses
+ o libblkid
 
 To install gfs2-utils, run:
 
-    make install
+ # make install
+
+Support scripts
+---------------
 
 The following scripts (located in gfs2/scripts) are used to complete
 the userland portion of the gfs2 withdraw feature using uevents. They
 will be installed by 'make install' to these directories by default:
 
-	82-gfs2-withdraw.rules in /usr/lib/udev/rules.d/
-	gfs2_withdraw_helper   in /usr/sbin/
+  82-gfs2-withdraw.rules in /usr/lib/udev/rules.d/
+  gfs2_withdraw_helper   in /usr/sbin/
 
-See also doc/README.contributing for details on submitting patches and
-doc/README.tests for more details regarding the test suite.
+See also doc/README.contributing for details on submitting patches.
 
