Fix spelling errors spotted by lintian
inconsistant -> inconsistent
filesytem -> filesystem
hexidecimal -> hexadecimal

--- a/gfs2/man/gfs2_edit.8
+++ b/gfs2/man/gfs2_edit.8
@@ -402,13 +402,13 @@ May produce this output:
 
 .TP
 gfs2_edit -x -p 25 field di_size /dev/roth_vg/roth_lv
-Print the di_size field of block 25, in hexidecimal.
+Print the di_size field of block 25, in hexadecimal.
 May produce this output:
 0x8000000
 
 .TP
 gfs2_edit -p 25 field di_size 0x4000 /dev/roth_vg/roth_lv
-Change the di_size field of block 25 to the hexidecimal value 0x4000.
+Change the di_size field of block 25 to the hexadecimal value 0x4000.
 May produce this output:
 16384
 .SH KNOWN BUGS
