mkfs.gfs2: Add extended option for specifying format version
Add -o format=<number> to allow testing of newer format versions. The
default value is taken from GFS2_FORMAT_FS in the
include/linux/gfs2_ondisk.h kernel header.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/man/mkfs.gfs2.8
+++ b/gfs2/man/mkfs.gfs2.8
@@ -86,6 +86,9 @@ probing the device or specified with the
 and
 .I sunit
 extended options.
+.TP
+.BI format= <number>
+Set the filesystem format version. Testing only.
 .RE
 .TP
 \fB-p\fP \fIprotocol\fR
