tunegfs2: Add support for fs format versions
Add a new -r option to change sb_fs_format.  Only increasing the number
is supported. New tests added.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/man/tunegfs2.8
+++ b/gfs2/man/tunegfs2.8
@@ -53,6 +53,11 @@ Set the filesystem UUID
 
 Print out the information on the version of the tool.
 
+.TP
+\fB-r\fP \fI<version>\fR
+
+Set the filesystem format version.
+
 .SH SEE ALSO
 
 \fBgfs2\fP(5)
