--- a/po/gfs2-utils.pot
+++ b/po/gfs2-utils.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: gfs2-utils 3.4.0\n"
+"Project-Id-Version: gfs2-utils 3.4.0.1.dev\n"
 "Report-Msgid-Bugs-To: cluster-devel@redhat.com\n"
-"POT-Creation-Date: 2021-03-08 14:34+0000\n"
+"POT-Creation-Date: 2021-03-15 09:57+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
