--- a/gfs2/man/gfs2_grow.8
+++ b/gfs2/man/gfs2_grow.8
@@ -8,39 +8,25 @@ gfs2_grow - Expand a GFS2 filesystem
 [\fIOPTION\fR]... <\fIDEVICE\fR|\fIMOUNTPOINT\fR>...
 
 .SH DESCRIPTION
-gfs2_grow is used to expand a GFS2 filesystem after the device
-upon which the filesystem resides has also been expanded.  By
-running gfs2_grow on a GFS2 filesystem, you are requesting that
-any spare space between the current end of the filesystem and
-the end of the device is filled with a newly initialized GFS2
-filesystem extension.  When this operation is complete, the resource
-group index for the filesystem is updated so that all nodes in the
+\fBgfs2_grow\fP expands a GFS2 filesystem after the device upon which the
+filesystem resides has also been expanded. \fBgfs2_grow\fP expands the GFS2
+filesystem to utilize any unused space between the current end of the
+filesystem and the end of the block device.  When this operation is complete,
+the resource group index for the filesystem is updated so that all nodes in the
 cluster can use the extra storage space that has been added.
 
 See \fBlvmlockd(8)\fP for the procedure to extend and refresh the logical
-volume prior to running gfs2_grow.
+volume prior to running \fBgfs2_grow\fP.
 
-You may only run gfs2_grow on a mounted filesystem; expansion of 
-unmounted filesystems is not supported.  You only need to
-run gfs2_grow on one node in the cluster.  All the other nodes will
-see the expansion has occurred and automatically start to use the
-newly available space.
+The \fIDEVICE\fR or \fIMOUNTPOINT\fR arguments must be paths to mounted
+filesystems; expansion of unmounted filesystems is not supported.
+\fBgfs2_grow\fP need only be run on one node in the cluster.  The other nodes
+will see the expansion has occurred and automatically start to use the newly
+available space.
 
-You must be superuser to execute \fBgfs2_grow\fP.  The gfs2_grow
-tool tries to prevent you from corrupting your filesystem by checking as
-many of the likely problems as it can.  When expanding a filesystem,
-only the last step of updating the resource index affects the currently
-mounted filesystem and so failure part way through the expansion process
-should leave your filesystem in its original unexpanded state.
-
-You can run gfs2_grow with the \fB-T\fP flag to get a display
-of the current state of a mounted GFS2 filesystem.
-
-The gfs2_grow tool uses the resource group (RG) size that was originally
-calculated when mkfs.gfs2 was done.  This allows tools like fsck.gfs2
-to better ensure the integrity of the file system.  Since the new free
-space often does not lie on even boundaries based on that RG size,
-there may be some unused space on the device after gfs2_grow is run.
+\fBgfs2_grow\fP must be run as the superuser. When the filesystem cannot be
+resized due to detected errors, \fBgfs2_grow\fP will leave the filesystem in a
+consistent state.
 .SH OPTIONS
 .TP
 \fB-D\fP
@@ -53,16 +39,17 @@ Prints out a short usage message and exits.
 Be quiet.  Don't print anything.
 .TP
 \fB-T\fP
-Test. Do all calculations, but do not write any data to the disk and do
-not expand the filesystem. This is used to discover what the tool would
-have done were it run without this flag.
+Test. Do all calculations, but do not write any data to the disk and do not
+expand the filesystem. This is used to discover what the tool would have done
+were it run without this flag. This option can be used to display the current
+state of a mounted GFS2 filesystem.
 .TP
 \fB-V\fP
 Version. Print out version information, then exit.
 
-.SH BUGS
+.SH NOTES
 
-There is no way to shrink a GFS2 filesystem.
+Shrinking GFS2 filesystems is currently unsupported.
 
 .SH SEE ALSO
 .BR mkfs.gfs2(8)
