gfs2_jadd.8: Man page improvements
- Add a note about journal contiguity
- Use more consistent formatting
- Restructure sentences to avoid using "you"
- Update text that was pasted from gfs2_grow.8
- Typo fixes ("mointpoint"...)

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/man/gfs2_jadd.8
+++ b/gfs2/man/gfs2_jadd.8
@@ -1,35 +1,30 @@
 .TH gfs2_jadd 8
 
 .SH NAME
-gfs2_jadd \- Add journals to a GFS2 filesystem
+gfs2_jadd - Add journals to a gfs2 filesystem
 
 .SH SYNOPSIS
 .B gfs2_jadd
-[\fIOPTION\fR]... <\fIDEVICE\fR|\fIMOINTPOINT\fR>...
+[\fIoptions\fR] <\fIdevice\fR|\fImountpoint\fR> ...
 
 .SH DESCRIPTION
-\fIgfs2_jadd\fR is used to add journals (and a few other per-node
-files) to a GFS2 filesystem.  When this operation is complete, the
-journal index is updated so that machines mounting the filesystem at a
-later date will see the newly created journals in addition to the
-journals already there. Machines which are already running in the
+\fBgfs2_jadd\fP is used to add journals (and a few other per-node files) to a
+gfs2 filesystem.  When this operation is complete, the journal index is updated
+so that machines mounting the filesystem will see the newly created journals in
+addition to the existing journals. Machines which are already running in the
 cluster are unaffected.
 
-You may only run \fIgfs2_jadd\fR on a mounted filesystem, addition of
-journals to unmounted filesystems is not supported.  You only need to
-run \fIgfs2_jadd\fR on one node in the cluster. All the other nodes
-will see the expansion has occurred when required.
+\fBgfs2_jadd\fP must be run on a mounted filesystem. Adding journals to
+unmounted filesystems is not supported. \fBgfs2_jadd\fP need only be run on one
+node in the cluster; the added journals will be visible across the cluster.
 
-You must be superuser to execute \fIgfs2_jadd\fR. The \fIgfs2_jadd\fR
-tool tries to prevent you from corrupting your filesystem by checking
-as many of the likely problems as it can. When growing a filesystem,
-only the last step of updating the journal index affects the currently
-mounted filesystem and so failure part way through the expansion
-process should leave your filesystem in its original state.
+\fBgfs2_jadd\fP must be run as root. \fBgfs2_jadd\fP only updates the journal
+index at the end of the process if no error conditions are encountered,
+otherwise the filesystem is left in its original state.
 
 .SH OPTIONS
 .TP
-\fB-c MegaBytes\fP
+\fB-c\fP \fImegabytes\fR
 Initial size of each journal's quota change file
 .TP
 \fB-D\fP
@@ -38,13 +33,12 @@ Print out debugging information about the filesystem layout.
 \fB-h\fP
 Prints out a short usage message and exits.
 .TP
-\fB-J size\fP
-The size of the new journals in megabytes. The defaults to 32MB (the
-minimum size allowed is 8MB). If you want to add journals of different
-sizes to the filesystem, you'll need to run gfs2_jadd once for each
-different size of journal.
+\fB-J\fP \fIsize\fR
+The size of the new journals in megabytes. The defaults to 32MB (the minimum
+size allowed is 8MB). If journals of different sizes are required,
+\fBgfs2_jadd\fP will need to be run once for each different size of journal.
 .TP
-\fB-j num\fP
+\fB-j\fP \fInumber\fR
 The number of new journals to add.
 .TP
 \fB-q\fP
@@ -52,6 +46,12 @@ Be quiet.  Don't print anything.
 .TP
 \fB-V\fP
 Version. Print version information, then exit.
-.
+
+.SH NOTES
+The journals added by \fBgfs2_jadd\fP are not guaranteed to be laid out
+contiguously as they are with \fBmkfs.gfs2(8)\fP. Therefore it may be
+beneficial to performance to create the filesystem with the required number of
+journals instead of adding journals later.
+
 .SH SEE ALSO
 mkfs.gfs2(8) gfs2_grow(8)
